--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,21 @@ Flask-SQLAlchemy==3.0.2
 Werkzeug==3.0.6
 gunicorn==20.1.0
 python-dotenv==1.0.0
+cachetools==5.5.0
+certifi==2024.8.30
+chardet==5.2.0
+click==8.1.7
+google-auth==2.36.0
+google-auth-oauthlib==1.2.1
+idna==3.4
+itsdangerous==2.2.0
+Jinja2==3.1.2
+MarkupSafe==2.1.2
+oauthlib==3.2.2
+pyasn1==0.6.1
+pyasn1-modules==0.6.1
+requests==2.32.3
+requests-oauthlib==2.0.0
+rsa==4.9
+six==16
+urllib3==2.2.3
